2005-07-12  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	I accidentally introduced revalidate calls for repaint calls.
	Reverted.

2005-07-12  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTreeUI.java
	Fixed formatting of the copyright notice.

2005-07-12  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(installDefaults): Create border based on defaults in current
	LookAndFeel.
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Included border for InternalFrame as
	LazyValue.

2005-07-12 Lillian Angel <langel@redhat.com>
	* javax/swing/plaf/basic/BasicLookAndFeel.java:
	Took out icon defaults.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(installUI): set root to visible
	(getCellBounds): took out addition to width since there may not be
	an icon.
	* javax/swing/plaf/metal/MetalLookAndFeel.java:
	Added in icon defaults
	* lib/Makefile.am:
	Fixed so icons are installed for the JTree

2005-07-12  Aaron Luchko  <aluchko@redhat.com>

	* gnu/classpath/jdwp/processor/ObjectReferenceCommandSet.java:
	New file.

2005-07-12  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
	Removed ad-hoc icons. Replaced them by
	BasicIconFactory.createEmptyFrameIcon just like in the JDK.
	(PropertyChangeHandler.propertyChange): Handle change events
	for closable, iconifiable and maximizable here.
	(createButtons): Recognize if the JInternalFrame is closable,
	iconifiable or maximizable.

2005-07-12  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Corrected color values for BasicL&F buttons.

2005-07-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JMenu.java:
	(isSelected): Call super.isSelected() instead of super.isArmed().
	* javax/swing/plaf/basic/BasicMenuItemUI.java:
	(paintMenuItem): Replaced incorrect selection criteria with call to
	isSelected().